[gd_scene load_steps=22 format=3 uid="uid://cbtrsg4a3b386"]

[ext_resource type="Script" path="res://technical/mines_level.gd" id="1_2a0p1"]
[ext_resource type="Texture2D" uid="uid://b17wod7uw7ut5" path="res://assets/images/areas/mines/minesLevel.png" id="2_vic5o"]
[ext_resource type="Texture2D" uid="uid://bms33udjyr7di" path="res://assets/images/areas/mines/addLevel.png" id="3_0neni"]
[ext_resource type="Texture2D" uid="uid://dp68kkpdlgp1w" path="res://assets/images/areas/mines/shrilowIcon.png" id="3_qjye1"]
[ext_resource type="Theme" uid="uid://dr1wna4c2ab2h" path="res://technical/textStyle.tres" id="4_2fpvo"]
[ext_resource type="Texture2D" uid="uid://bnylukq57uy35" path="res://assets/images/areas/mines/mokaIcon.png" id="5_b43hs"]
[ext_resource type="Texture2D" uid="uid://dgdqkghonjxbv" path="res://assets/images/areas/mines/melIcon.png" id="6_ekpkl"]
[ext_resource type="Texture2D" uid="uid://bccwqwg7dfctb" path="res://assets/images/areas/mines/blairIcon.png" id="7_drkbm"]
[ext_resource type="Texture2D" uid="uid://cm8ea8p5r7100" path="res://assets/images/areas/mines/charlotteIcon.png" id="8_dcpb8"]
[ext_resource type="Texture2D" uid="uid://dtgvg72a7dst6" path="res://assets/images/areas/mines/buyIcon.png" id="9_5tep5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14jd1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a7opj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wvyei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iuugl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3g2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mudre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rl562"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmlvi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxpb3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n3ntu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yepir"]

[node name="MinesLevel" type="Node2D"]
script = ExtResource("1_2a0p1")

[node name="VisualCodeSpaghetti" type="Node2D" parent="."]

[node name="MinesLevel" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("2_vic5o")

[node name="ShrilowIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("3_qjye1")

[node name="ShrilowCost" type="Label" parent="VisualCodeSpaghetti"]
z_index = 1
offset_left = 35.0
offset_top = 120.0
offset_right = 114.0
offset_bottom = 150.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="ShrilowButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 29.0
offset_top = 55.0
offset_right = 118.0
offset_bottom = 136.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="MokaIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("5_b43hs")

[node name="MokaCost" type="Label" parent="VisualCodeSpaghetti"]
z_index = 1
offset_left = 123.0
offset_top = 120.0
offset_right = 202.0
offset_bottom = 150.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="MokaButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 118.0
offset_top = 55.0
offset_right = 207.0
offset_bottom = 136.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="MelIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("6_ekpkl")

[node name="MelCost" type="Label" parent="VisualCodeSpaghetti"]
z_index = 1
offset_left = 211.0
offset_top = 120.0
offset_right = 290.0
offset_bottom = 150.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="MelButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 207.0
offset_top = 55.0
offset_right = 296.0
offset_bottom = 136.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="BlairIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("7_drkbm")

[node name="BlairCost" type="Label" parent="VisualCodeSpaghetti"]
z_index = 1
offset_left = 35.0
offset_top = 200.0
offset_right = 114.0
offset_bottom = 230.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="BlairButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 29.0
offset_top = 136.0
offset_right = 118.0
offset_bottom = 217.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="CharlotteIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("8_dcpb8")

[node name="CharlotteCost" type="Label" parent="VisualCodeSpaghetti"]
z_index = 1
offset_left = 123.0
offset_top = 200.0
offset_right = 202.0
offset_bottom = 230.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="CharlotteButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 118.0
offset_top = 136.0
offset_right = 207.0
offset_bottom = 217.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="BuyIcon" type="Sprite2D" parent="VisualCodeSpaghetti"]
position = Vector2(576, 324)
texture = ExtResource("9_5tep5")

[node name="BuyButton" type="Button" parent="VisualCodeSpaghetti"]
offset_left = 207.0
offset_top = 136.0
offset_right = 296.0
offset_bottom = 217.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_14jd1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a7opj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wvyei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_iuugl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3g2s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mudre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl562")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mmlvi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mxpb3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_n3ntu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yepir")

[node name="CharName" type="Label" parent="."]
z_index = 1
offset_left = -1.0
offset_top = 217.0
offset_right = 323.0
offset_bottom = 255.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 14
theme_override_font_sizes/font_size = 35
text = "NAME"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CharDesc" type="Label" parent="."]
z_index = 1
offset_left = 17.0
offset_top = 240.0
offset_right = 306.0
offset_bottom = 358.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 28
text = "DESC"
horizontal_alignment = 1
autowrap_mode = 3

[node name="NewMines" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("3_0neni")

[node name="NewLevelCost" type="Label" parent="."]
offset_left = 85.0
offset_top = 459.0
offset_right = 236.0
offset_bottom = 556.0
scale = Vector2(1, 0.6)
theme = ExtResource("4_2fpvo")
theme_override_colors/font_color = Color(0, 1, 0.0627451, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 90
text = "COST"
horizontal_alignment = 1
clip_text = true

[connection signal="mouse_entered" from="VisualCodeSpaghetti/ShrilowButton" to="." method="_on_shrilow_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/ShrilowButton" to="." method="_on_shrilow_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/ShrilowButton" to="." method="_on_shrilow_button_pressed"]
[connection signal="mouse_entered" from="VisualCodeSpaghetti/MokaButton" to="." method="_on_moka_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/MokaButton" to="." method="_on_moka_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/MokaButton" to="." method="_on_moka_button_pressed"]
[connection signal="mouse_entered" from="VisualCodeSpaghetti/MelButton" to="." method="_on_mel_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/MelButton" to="." method="_on_mel_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/MelButton" to="." method="_on_mel_button_pressed"]
[connection signal="mouse_entered" from="VisualCodeSpaghetti/BlairButton" to="." method="_on_blair_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/BlairButton" to="." method="_on_blair_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/BlairButton" to="." method="_on_blair_button_pressed"]
[connection signal="mouse_entered" from="VisualCodeSpaghetti/CharlotteButton" to="." method="_on_charlotte_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/CharlotteButton" to="." method="_on_charlotte_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/CharlotteButton" to="." method="_on_charlotte_button_pressed"]
[connection signal="mouse_entered" from="VisualCodeSpaghetti/BuyButton" to="." method="_on_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="VisualCodeSpaghetti/BuyButton" to="." method="_on_buy_button_mouse_exited"]
[connection signal="pressed" from="VisualCodeSpaghetti/BuyButton" to="." method="_on_buy_button_pressed"]
